# agentic-engineering-lab

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml
.codex/: hooks.json
alembic/: env.py
alembic/versions/: 0001_lab_foundation.py  0002_scout_observability.py  0003_human_review.py  0004_manifest_opt_in.py  0005_evaluation_and_causal_links.py  0006_check_evidence_identity.py
docs/: PRD.md  architecture.md  contracts.md  data-model.md  evaluation.md  implementation-plan.md  repository-manifest.md  security.md
evaluation/: cycle-v1.json  evidence-output.json  exclusions-v1.json  fixture-plan-v1.md  seed-output.json
evaluation/executor/: Dockerfile
evaluation/fixtures/: README.md
evaluation/manifests/: eval-v1.json
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: materialize_evaluation_fixtures.py  probe_evaluation_executor.py  render_evaluation_manifest.py  seed_evaluation_repository.py
src/agentic_lab/: __init__.py
tests/: conftest.py
tests/contract/: test_api_contract.py  test_documentation_links.py  test_executor_api.py
tests/integration/: test_intake_and_leases.py  test_worker_heartbeat.py
tests/unit/: test_assessor.py  test_ci_classification.py  test_ci_orchestrator.py  test_completion_contracts.py  test_evaluation_batch.py  test_evaluation_cycle.py  test_evaluation_executor_probe.py  test_evaluation_manifest_render.py  test_evaluation_materialize.py  test_evaluators.py  (+24 more)
(+79 files in other folders)
