[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agentic-engineering-lab"
version = "0.1.0"
description = "Local-first control plane for constrained coding-agent workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "alembic>=1.13,<2",
  "docker>=7,<8",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "langfuse>=4,<5",
  "psycopg[binary]>=3.2,<4",
  "PyJWT[crypto]>=2.10,<3",
  "pydantic-settings>=2.6,<3",
  "pydantic-ai-slim[openai]>=1,<2",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
agentic-lab-recipe-adapter = "agentic_lab.executor.adapter:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["agentic_lab"]
